--- a/README
+++ b/README
@@ -1,6 +1,11 @@
-StackTracker, a desktop notifier for StackOverflow.com built with PyQt4
+#StackTracker
+A desktop notifier for StackOverflow.com built with PyQt4
 
 The application will display a task tray notification when someone has posted an answer or a comment to a question you are tracking on StackOverflow.com.  Clicking the notification will open the question in your browser.
 
+##Windows Installer
+http://github.com/downloads/swanson/stacktracker/StackTracker.zip
+
+##Project Details
 License: GPL
 Contact: mdswanso@purdue.edu
