--- a/TODO
+++ b/TODO
@@ -1,7 +1,7 @@
 By July 9 - BETA RELEASE
 - add error handling to API call method
-- add placeholder question icon graphic
-- try out improved api urls, activity and timestamps
+DONE - add placeholder question icon graphic 
+DONE - try out improved api urls, activity and timestamps
 - add Mac icon
 - multi alert queue -- ugh
 - logo, write-up and video
