updating Mac build script to add .icns file

--- a/TODO
+++ b/TODO
@@ -2,6 +2,6 @@ By July 9 - BETA RELEASE
 - add error handling to API call method
 DONE - add placeholder question icon graphic 
 DONE - try out improved api urls, activity and timestamps
-- add Mac icon
+DONE - add Mac icon
 - multi alert queue -- ugh
 - logo, write-up and video
