--- a/TODO
+++ b/TODO
@@ -3,5 +3,5 @@ By July 9 - BETA RELEASE
 DONE - add placeholder question icon graphic 
 DONE - try out improved api urls, activity and timestamps
 DONE - add Mac icon
-- multi alert queue -- ugh
+DONE - multi alert queue -- ugh
 - logo, write-up and video
